Fix alignment of case form page

--- a/legal_db/static/styles.scss
+++ b/legal_db/static/styles.scss
@@ -246,6 +246,11 @@ a, a:hover {
     .input, .select {
       margin-top: $space-small;
     }
+
+    h4 {
+      margin-bottom: $space-small;
+    }
+
     hr {
       margin: $space-normal 0;
       background-color: $color-light-gray;
